--- a/auth-service/auth-user/pom.xml
+++ b/auth-service/auth-user/pom.xml
@@ -12,7 +12,11 @@
     <artifactId>auth-user</artifactId>
 
     <dependencies>
-
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-oauth2</artifactId>
+        </dependency>
     </dependencies>
+
 
 </project>
