--- a/auth-service/auth-auth/pom.xml
+++ b/auth-service/auth-auth/pom.xml
@@ -3,7 +3,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>auth-common</artifactId>
+        <artifactId>auth-service</artifactId>
         <groupId>com.swx.auth</groupId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
@@ -12,9 +12,11 @@
     <artifactId>auth-auth</artifactId>
     <dependencies>
         <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-oauth2</artifactId>
+            <groupId>com.swx.auth</groupId>
+            <artifactId>auth-common</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
         </dependency>
+
     </dependencies>
 
 
