--- a/auth-service/auth-common/pom.xml
+++ b/auth-service/auth-common/pom.xml
@@ -25,6 +25,10 @@
             <artifactId>commons-codec</artifactId>
             <version>1.12</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-oauth2</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
