--- a/auth-service/auth-auth/src/main/resources/application.yml
+++ b/auth-service/auth-auth/src/main/resources/application.yml
@@ -1,7 +1,23 @@
+server:
+  port: 8080
+  servlet:
+    context-path: /auth-auth
+
+
 spring:
+  application:
+    name: auth-auth
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
     username: root
     password: admin
     url: jdbc:mysql://localhost:3306/swx_oauth?characterEncoding=utf8&useSSL=false&allowMultiQueries=true
     # initialization-mode: always
+
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8000/eureka
+  instance:
+    prefer-ip-address: true
