--- a/auth-service/auth-auth/pom.xml
+++ b/auth-service/auth-auth/pom.xml
@@ -16,6 +16,10 @@
             <artifactId>auth-common</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>mysql</groupId>
