--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,8 @@
     <description>Demo project for Spring Boot</description>
     <modules>
         <module>auth-service</module>
+        <module>auth-eureka</module>
+        <module>auth-gateway</module>
     </modules>
 
     <properties>
