--- a/auth-gateway/src/main/resources/application.yml
+++ b/auth-gateway/src/main/resources/application.yml
@@ -13,6 +13,7 @@ zuul:
       path: /auth-auth/**
       serviceId: auth-auth
       strip-prefix: false
+      custom-sensitive-headers: true                                    # zuul授权码跳转
     user:
       path: /auth-user/**
       serviceId: auth-user
