--- a/auth-service/pom.xml
+++ b/auth-service/pom.xml
@@ -7,6 +7,7 @@
         <module>auth-common</module>
         <module>auth-auth</module>
         <module>auth-user</module>
+        <module>auth-order</module>
     </modules>
     <parent>
         <groupId>com.swx.auth</groupId>
